--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Awesomeness Loading</title>
+    <title>Oopsie! 404!</title>
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -28,9 +28,9 @@
     </header>
     <main class="my-auto">
         <div class="container">
-            <h1 class="page-title">Coming soon</h1>
-            <p class="page-description">  Hey there! Thanks for visiting by. <br>
-                Awesomeness is being built. Stay tuned!
+            <h1 class="page-title">Woah! That's a 404!</h1>
+            <p class="page-description">  Feeling a little adventurous, aren't we?<br>
+                Nothing exists here.
             </p>
         </div>
     </main>
