--- a/embedded-maps/index.html
+++ b/embedded-maps/index.html
@@ -1,1 +1,50 @@
-<iframe src="https://snazzymaps.com/embed/447717" width="100%" height="100%" style="border:none;"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Server Coverage</title>
+	<link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
+
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+    <style>
+        html, body {
+            height: 100%;
+            width: 100%;
+            background-color: rgba(211, 211, 211, 0.5); /* set the background color with 50% transparency */
+            background-image: url("https://share.suh.ovh/2s2NW.jpg");
+            background-size: cover; /* resize the background image to cover the whole screen */
+            background-repeat: no-repeat; /* prevent the background image from repeating */
+            background-position: center center; /* center the background image */
+        }
+    
+        .container-fluid {
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+	<div class="container-fluid" style="font-family: 'Lexend', sans-serif;">
+		<div class="row" style="padding-top: 30px; padding-bottom: 30px;">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-6">
+				<div class="row">
+					<div class="col-sm-12" style="min-width: 100%; min-height: 100%;">
+                        <center>
+						    <h2>Hello There!</h2>
+						    <p>
+                            Checkout my servers around the world!</p> 
+                            <br>
+                            <iframe src="https://snazzymaps.com/embed/447717" frameborder="0" style="border-radius: 15px; overflow: hidden; flex-shrink: 0; min-width: 100%; height: 650px;" allowfullscreen></iframe>    
+                        </center>    	
+					</div>	
+				</div>
+			</div>
+		</div>
+</body>
+</html>
