--- a/coming-soon-html/index.html
+++ b/coming-soon-html/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bd-coming-soon.css">
     <link href="https://fonts.googleapis.com/css?family=Lexend" rel="stylesheet">
+    <script async src="https://analytics.suh.ovh/script.js" data-website-id="67d247f5-37f5-49a0-beed-501de6651ebc"></script>
 </head>
 
 <body class="min-vh-100 d-flex flex-column">
