--- a/embedded-maps/index.html
+++ b/embedded-maps/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script async src="https://analytics.suh.ovh/script.js" data-website-id="87f39ec8-02d8-43a6-8276-c2f5af719f34"></script>
 
     <style>
         html, body {
