--- a/placeholder-html/index.html
+++ b/placeholder-html/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
     <link href="css/main.css?ver=1.2.0" rel="stylesheet">
+    <script async src="https://analytics.suh.ovh/script.js" data-website-id="b0e5645a-2159-47f3-9c06-fa17d85c5cdd"></script>
   </head>
   <body id="top"><div class="site-wrapper">
   <div class="site-wrapper-inner">
